Version 14.0.0
--------------

    * Hashes are stored on files in xattrs (when available) for faster rebuilds (#640).
    * Use of xattrs can now be disabled for systems where they are not supported (#641, #548, #644)
    * `plz tool maven` and the builtin `maven_jars` are removed. They can be used from their
      new home of https://github.com/thought-machine/pleasings.
    * Non zip-safe pexes are now cached & can be reused on subsequent runs.
    * Users can bring their own test runner via the `python.testrunnerbootstrap` config property.
    * `go_test` no longer works for versions prior to 1.8
    * `go_library` rules using assembly now only work with Go 1.12+ (previously they did not
      work with 1.12) (#659)
    * `plz rebuild` is removed in favour of `plz build --rebuild`
    * The `--keep_going` flag has been removed (#655)
    * `python_binary` and `python_test` now take a `site` argument determining whether they
      import the site module at startup. Default is off. (#634)
    * Import lines are excluded from Python coverage stats (#607)
    * Jarcat honours --strip_prefix in some more places
    * Support for uploading test results to a remote server (#657)
    * Some fixes for cgo_library when at the root of the repo


Version 13.8.2
--------------

    * Fix watch on files at repo root (#618)
    * Allow targets labelled as manual to be included in (most) `plz query` invocations
    * Add jcenter.bintry.com as a default Maven repo to improve reliability (looks like
      repo1.maven.org rate limits us sometimes).


Version 13.8.1
--------------

    * Update returns to original directory before re-exec (#627)
    * More arguments are completed as filenames (#628)
    * Initial support for incremental coverage calculations.


Version 13.8.0
--------------

    * Allow specifying Python interpreter options through global config (#625)
    * Allow `sh_cmd` to take commands as a list (#623)