@@ -1,7 +1,7 @@
 {
     "preamble": "",
     "topics": {
-        "plzconfig": "The root of a Please repo is identified by a ${CYAN}.plzconfig${RESET} file. This also has a number of options to control various ways it behaves.\n\nSee ${BLUE}https://please.build/config.html${RESET} for a detailed reference of all options.\n\nThere are several different .plzconfig files that can be loaded, which override one another. From lowest to highest priority:\n ${CYAN}.plzconfig${RESET}, which identifies the repo root.\n ${CYAN}.plzconfig_linux_amd64${RESET} (or ${CYAN}.plzconfig_darwin_amd64${RESET}, etc) defines arch-specific options.\n ${CYAN}/etc/plzconfig${RESET} can be used to define machine-specific options (e.g. on a CI server)\n ${CYAN}.plzconfig.local${RESET} is used for non-checked-in config that is bespoke to the user.",
+        "plzconfig": "The root of a Please repo is identified by a ${CYAN}.plzconfig${RESET} file. This also has a number of options to control various ways it behaves.\n\nSee ${BLUE}https://please.build/config.html${RESET} for a detailed reference of all options.\n\nThere are several different .plzconfig files that can be loaded, which override one another. From lowest to highest priority:\n ${CYAN}.plzconfig${RESET}, which identifies the repo root.\n ${CYAN}.plzconfig_linux_amd64${RESET} (or ${CYAN}.plzconfig_darwin_amd64${RESET}, etc) defines arch-specific options.\n ${CYAN}/etc/please/plzconfig${RESET} can be used to define machine-specific options (e.g. on a CI server)\n ${CYAN}.plzconfig.local${RESET} is used for non-checked-in config that is bespoke to the user.",
 	"tracing": "Please can generate output compatible with Chrome's built-in tracing tool. It can be switched on with the ${BOLD_CYAN}--trace_file${RESET} flag and, once done, you can load the file by visiting ${BLUE}chrome://tracing${RESET}.\nThis is a handy way to visualise where time is spent during a build and can be useful to diagnose slow builds.",
 	"": "${BOLD_GREEN}Please${RESET} ${BOLD_WHITE}is a high-performance language-agnostic build system.${RESET}\n\nTry ${BOLD_CYAN}plz help <topic>${RESET} for help on a specific topic;\n${BOLD_CYAN}plz --help${RESET} if you want information on flags / options / commands that it accepts;\n${BOLD_CYAN}plz help topics${RESET} if you want to see the list of possible topics to get help on\nor try a few commands like ${BOLD_CYAN}plz build${RESET} or ${BOLD_CYAN}plz test${RESET} if your repo is already set up and you'd like to see it in action.\n\nOr see the website (${BLUE}https://please.build${RESET}) for more information."
     }
